# discord

./: .coveragerc  .gitignore  .gitlab-ci.yml  Procfile  README.md  pyproject.toml
.github/workflows/: main.yaml  python-app.yml
.gitlab/ci/: deploy.ci.yml  test.ci.yml
micebot/: __main__.py  client.py
micebot/api/: __init__.py  errors.py
micebot/bot/: __init__.py
micebot/client/: __init__.py  order_commands.py  product_commands.py
micebot/commands/: orders.py  products.py
micebot/model/: embed.py  env.py  messages.py  model.py  permission.py
test/unit/: factories.py  test_case.py
test/unit/api/: __init__.py  test_api.py
test/unit/bot/: test_bot.py
